[benchmark] refactor cdp benchmarks and api model
